# Math6370-Yang

HW2/: GramSchmidt1d.cpp  Makefile  a_data  results.txt  vec1d.hpp  vec1d_test.cpp  vec2d.cpp  vec2d.hpp  vec2d_b.cpp  vec2d_b.hpp  vec2d_b_test.cpp  vec2d_test.cpp
bimpb/: 1a63.face  1ajj.face  1ajj.vert  Makefile  gmon.out  main.c  main_cuda.c  main_cuda_old.c  main_mpi.c  main_mpi1.c  main_mpi2.c  main_omp.c  matvec.c  matvec_cuda.cu  matvec_mpi.c  matvec_mpi_old.c  matvec_mpi_subinit.c  matvec_omp.c  pp_timer.c  readin.c
bimpb/kokkos/: CMakeLists.txt  Makefile  Terminal Saved Output  gl_constants.h  gl_functions.h  main_kokkos.c  main_kokkos.cpp  matvec_kokkos.c  matvec_kokkos.cpp  readin.c  readin.cpp  readin_new.c
bimpb/kokkos/gmres/: gmres.c
bimpb/kokkos/tmp/: Makefile  Makefile.gmres  main_kokkos.c
bimpb_cuda_ds 2/: 1a63.face
hw2/: GramSchmidt2d.cpp  GramSchmidt2d_b.cpp  Makefile  grading.txt  vec1d.cpp  vec2d.hpp  vec2d_b.hpp  vec2d_test.cpp
lab1-intro_unix/: Makefile  grading.txt
lab10-iterative_linear_cxx/: Makefile  grading.txt  input.txt  linresid_mpi_async.cpp  linresid_mpi_async_old.cpp  mpi.job  p128_m_out.38048847  p128a_m_out.38048869  results.txt
lab11-manager_worker_cxx/: Makefile  chemistry2.cpp  chemistry_mpi.cpp  grading.txt  results.txt
lab12-kokkos/: 1_basics.cpp  1_basics_old.cpp  2_views.cpp  3_data_transfers.cpp  4_spaces_layouts.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  grading.txt
lab2-intermediate_unix/: Makefile  grading.txt
lab3-profiling_debugging/: Makefile  driver1.cpp  gmon.out  grading.txt  optimization_results.txt  profiling_data.txt  r.txt  tridiag_matvec.cpp  vectors_new.cpp
lab4-using_maneframe/: ex1_out.txt  (+5 more)
(+138 files in other folders)
